--- a/mcp/fast_agent/calculator/fastagent.config.yaml
+++ b/mcp/fast_agent/calculator/fastagent.config.yaml
@@ -10,7 +10,7 @@
 # If not specified, defaults to "haiku". 
 # Can be overriden with a command line switch --model=<model>, or within the Agent constructor.
 
-default_model: haiku
+default_model: openai.gpt-4.1-nano
 
 # Logging and Console Configuration:
 logger:
