[#48] feat: Ollama 기본 설정 추가
* `fastagent.secrets.yaml`에 Ollama API 키 및 기본 URL 추가
* `fastagent.config.yaml`에서 기본 모델 주석 처리

--- a/mcp/fast_agent/calculator/fastagent.config.yaml
+++ b/mcp/fast_agent/calculator/fastagent.config.yaml
@@ -11,6 +11,7 @@
 # Can be overriden with a command line switch --model=<model>, or within the Agent constructor.
 
 default_model: openai.gpt-4.1-nano
+#default_model: generic.llama3.2
 
 # Logging and Console Configuration:
 logger:
