--- a/mcp/fast_agent/calculator/fastagent.secrets.yaml
+++ b/mcp/fast_agent/calculator/fastagent.secrets.yaml
@@ -6,4 +6,6 @@
 
 openai:
     api_key: ${OPENAI_API_KEY}
-
+generic:
+  api_key: "ollama" # Default for Ollama, change as needed
+  base_url: "http://localhost:11434/v1" # Default for Ollama
